src/main/resources/static/main.css
body {
    background-color: #44ca492e;
}

table.request-table {
    border-radius: 20px;
    border-collapse: collapse;
    border: solid 1px #196328;
    max-width: 800px;
    background-color: #c3f5b3;
    display: block;
    padding: 15px;
}

table.request-table > tbody > tr > td {
    border: 1px dotted #999;
    text-align: left;
    padding: 5px;
}

table.request-table > tbody > tr > td.method {
    color: red;
    font-size: 20px;
    font-weight: bold;
}

table.request-table > tbody > tr > td.request_id {
    text-align: right;
    color: grey;
}

table.request-table > tbody > tr > td.request_time {
    color: green;
    min-width: 125px;
}

table.request-table > tbody > tr > td.body_value {
    color: #ff0000;
    word-break: break-word;
}


table.headers {
    max-width: 600px;
    display: block;
}

table.headers > tbody > tr > td{
    border-bottom: dotted 1px #ff00004a;
}

span.hvalue {
    color: #9400d3;
}

.name {
    color: blue;
}

span.hname {
    color: brown;
    margin-right: 1em;
}

.request:nth-child(odd) table.request-table {
    float: left;
    overflow: hidden;
    clear: both;
    margin-bottom: 20px;
}

.request:nth-child(even) table.request-table {
    float: right;
    overflow: hidden;
    clear: both;
    margin-bottom: 20px;
}

div#react {
    overflow: hidden;
}

input[type="submit"] {
    width: 100%;
    height: 20px;
}

#reset-button {
    width: 600px;
    margin: 0 auto;
    margin-bottom: 15px;
}

